Added items selling functionality

--- a/market/templates/includes/items_modals.html
+++ b/market/templates/includes/items_modals.html
@@ -2,8 +2,9 @@
     .modal-content {
       background-color: #212121
     }
-</style>    
-    <!-- More Info -->
+  </style>
+  
+  <!-- More Info -->
   <div class="modal fade" id="Modal-MoreInfo-{{ item.id }}"
        tabindex="-1"
        aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -49,18 +50,18 @@
         </div>
         <div class="modal-body">
           <form method="POST">
-              {{ purchase_form.hidden_tag() }}
-              <h4 class="text-center">
-                Are you sure you want to buy {{ item.name }} for ${{ item.price }} ?
-              </h4>
-              <br>
-              <h6 class="text-center">
-                  By clicking purchase, you will purchase this item.
-              </h6>
-              <br>
-              <input id="purchased_item" name="purchased_item" type="hidden" value="{{item.name}}">
-              {{ purchase_form.submit(class="btn btn-outline-success btn-block") }}
-            </form>
+            {{ purchase_form.hidden_tag() }}
+            <h4 class="text-center">
+              Are you sure you want to buy {{ item.name }} for ${{ item.price }} ?
+            </h4>
+            <br>
+            <h6 class="text-center">
+              By clicking Purchase, you will purchase this item.
+            </h6>
+            <br>
+            <input id="purchased_item" name="purchased_item" type="hidden" value="{{item.name}}">
+            {{ purchase_form.submit(class="btn btn-outline-success btn-block") }}
+          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary"
